--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -1,6 +1,6 @@
 ---
 name: Code static analysis
-on: [pull_request]  # yamllint disable-line rule:truthy
+on: [ "push", "pull_request" ]  # yamllint disable-line rule:truthy
 
 permissions:
   contents: read
