--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -45,8 +45,8 @@ jobs:
       - name: Configure Podman
         run: |
           mkdir -p $HOME/.config/containers/
-          cp containers.conf $HOME/.config/containers/containers.conf
-          cp storage.conf $HOME/.config/containers/storage.conf
+          cp ci/containers.conf $HOME/.config/containers/containers.conf
+          cp ci/storage.conf $HOME/.config/containers/storage.conf
           # should at least reset storage when touching storage.conf
           sudo mkdir -p /mnt/containers/
           sudo chown -R $USER:$USER /mnt/containers
