--- a/.github/workflows/build-notebooks.yaml
+++ b/.github/workflows/build-notebooks.yaml
@@ -15,7 +15,8 @@
             "needs": [],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "base-ubi8-python-3.8"
+                "target": "base-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -25,7 +26,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-minimal-ubi8-python-3.8"
+                "target": "jupyter-minimal-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -35,7 +37,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-datascience-ubi8-python-3.8"
+                "target": "jupyter-datascience-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -45,7 +48,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "cuda-ubi8-python-3.8"
+                "target": "cuda-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -55,7 +59,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "cuda-jupyter-minimal-ubi8-python-3.8"
+                "target": "cuda-jupyter-minimal-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -65,7 +70,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "cuda-jupyter-datascience-ubi8-python-3.8"
+                "target": "cuda-jupyter-datascience-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -75,7 +81,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-trustyai-ubi8-python-3.8"
+                "target": "jupyter-trustyai-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -85,7 +92,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "habana-jupyter-1.9.0-ubi8-python-3.8"
+                "target": "habana-jupyter-1.9.0-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -95,7 +103,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "habana-jupyter-1.10.0-ubi8-python-3.8"
+                "target": "habana-jupyter-1.10.0-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -105,7 +114,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "habana-jupyter-1.11.0-ubi8-python-3.8"
+                "target": "habana-jupyter-1.11.0-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -115,7 +125,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "habana-jupyter-1.13.0-ubi8-python-3.8"
+                "target": "habana-jupyter-1.13.0-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -125,7 +136,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "runtime-minimal-ubi8-python-3.8"
+                "target": "runtime-minimal-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -135,7 +147,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "runtime-datascience-ubi8-python-3.8"
+                "target": "runtime-datascience-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -145,7 +158,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "runtime-pytorch-ubi8-python-3.8"
+                "target": "runtime-pytorch-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -155,7 +169,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "runtime-cuda-tensorflow-ubi8-python-3.8"
+                "target": "runtime-cuda-tensorflow-ubi8-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -163,7 +178,8 @@
             "needs": [],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "base-ubi9-python-3.9"
+                "target": "base-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -173,7 +189,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-minimal-ubi9-python-3.9"
+                "target": "jupyter-minimal-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -183,7 +200,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-datascience-ubi9-python-3.9"
+                "target": "jupyter-datascience-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -193,7 +211,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "cuda-ubi9-python-3.9"
+                "target": "cuda-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -203,7 +222,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "cuda-jupyter-minimal-ubi9-python-3.9"
+                "target": "cuda-jupyter-minimal-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -213,7 +233,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "cuda-jupyter-datascience-ubi9-python-3.9"
+                "target": "cuda-jupyter-datascience-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -223,7 +244,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "cuda-jupyter-tensorflow-ubi9-python-3.9"
+                "target": "cuda-jupyter-tensorflow-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -233,7 +255,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-pytorch-ubi9-python-3.9"
+                "target": "jupyter-pytorch-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -243,7 +266,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-trustyai-ubi9-python-3.9"
+                "target": "jupyter-trustyai-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -253,7 +277,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "runtime-minimal-ubi9-python-3.9"
+                "target": "runtime-minimal-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -263,7 +288,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "runtime-datascience-ubi9-python-3.9"
+                "target": "runtime-datascience-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -273,7 +299,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "runtime-pytorch-ubi9-python-3.9"
+                "target": "runtime-pytorch-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -283,7 +310,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "runtime-cuda-tensorflow-ubi9-python-3.9"
+                "target": "runtime-cuda-tensorflow-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -293,7 +321,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "codeserver-ubi9-python-3.9"
+                "target": "codeserver-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -303,7 +332,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "intel-base-gpu-ubi9-python-3.9"
+                "target": "intel-base-gpu-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -313,7 +343,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "intel-runtime-tensorflow-ubi9-python-3.9"
+                "target": "intel-runtime-tensorflow-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -323,7 +354,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-intel-tensorflow-ubi9-python-3.9"
+                "target": "jupyter-intel-tensorflow-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -333,7 +365,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "intel-runtime-pytorch-ubi9-python-3.9"
+                "target": "intel-runtime-pytorch-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -343,7 +376,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-intel-pytorch-ubi9-python-3.9"
+                "target": "jupyter-intel-pytorch-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -353,7 +387,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "intel-runtime-ml-ubi9-python-3.9"
+                "target": "intel-runtime-ml-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -363,7 +398,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-intel-ml-ubi9-python-3.9"
+                "target": "jupyter-intel-ml-ubi9-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -371,7 +407,8 @@
             "needs": [],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "base-c9s-python-3.9"
+                "target": "base-c9s-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -381,7 +418,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "cuda-c9s-python-3.9"
+                "target": "cuda-c9s-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -391,7 +429,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "rstudio-c9s-python-3.9"
+                "target": "rstudio-c9s-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -401,7 +440,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "cuda-rstudio-c9s-python-3.9"
+                "target": "cuda-rstudio-c9s-python-3.9",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -409,7 +449,8 @@
             "needs": [],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "base-anaconda-python-3.8"
+                "target": "base-anaconda-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         },
@@ -419,7 +460,8 @@
             ],
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
-                "target": "jupyter-datascience-anaconda-python-3.8"
+                "target": "jupyter-datascience-anaconda-python-3.8",
+                "event_name": "${{ github.event_name }}"
             },
             "secrets": "inherit"
         }
