--- a/.github/workflows/build-notebooks.yaml
+++ b/.github/workflows/build-notebooks.yaml
@@ -16,7 +16,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "base-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -27,7 +27,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-minimal-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -38,7 +38,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-datascience-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -49,7 +49,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "cuda-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -60,7 +60,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "cuda-jupyter-minimal-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -71,7 +71,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "cuda-jupyter-datascience-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -82,7 +82,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-trustyai-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -93,7 +93,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "habana-jupyter-1.9.0-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -104,7 +104,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "habana-jupyter-1.10.0-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -115,7 +115,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "habana-jupyter-1.11.0-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -126,7 +126,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "habana-jupyter-1.13.0-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -137,7 +137,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "runtime-minimal-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -148,7 +148,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "runtime-datascience-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -159,7 +159,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "runtime-pytorch-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -170,7 +170,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "runtime-cuda-tensorflow-ubi8-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -179,7 +179,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "base-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -190,7 +190,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-minimal-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -201,7 +201,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-datascience-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -212,7 +212,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "cuda-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -223,7 +223,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "cuda-jupyter-minimal-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -234,7 +234,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "cuda-jupyter-datascience-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -245,7 +245,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "cuda-jupyter-tensorflow-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -256,7 +256,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-pytorch-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -267,7 +267,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-trustyai-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -278,7 +278,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "runtime-minimal-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -289,7 +289,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "runtime-datascience-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -300,7 +300,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "runtime-pytorch-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -311,7 +311,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "runtime-cuda-tensorflow-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -322,7 +322,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "codeserver-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -333,7 +333,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "intel-base-gpu-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -344,7 +344,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "intel-runtime-tensorflow-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -355,7 +355,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-intel-tensorflow-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -366,7 +366,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "intel-runtime-pytorch-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -377,7 +377,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-intel-pytorch-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -388,7 +388,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "intel-runtime-ml-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -399,7 +399,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-intel-ml-ubi9-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -408,7 +408,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "base-c9s-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -419,7 +419,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "cuda-c9s-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -430,7 +430,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "rstudio-c9s-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -441,7 +441,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "cuda-rstudio-c9s-python-3.9",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -450,7 +450,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "base-anaconda-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         },
@@ -461,7 +461,7 @@
             "uses": "./.github/workflows/build-notebooks-TEMPLATE.yaml",
             "with": {
                 "target": "jupyter-datascience-anaconda-python-3.8",
-                "github": "${{ github }}"
+                "github": "${{ toJSON(github) }}"
             },
             "secrets": "inherit"
         }
