--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -15,6 +15,11 @@ name: Build & Publish Notebook Servers (TEMPLATE)
         required: true
         description: "top workflow's `github`"
         type: string
+      subscription:
+        required: false
+        default: false
+        description: "add RHEL subscription from github secret"
+        type: boolean
 
 jobs:
   build:
@@ -110,6 +115,13 @@ jobs:
           systemctl --user daemon-reload
           systemctl --user start homebrew.podman.service
           echo "PODMAN_SOCK=/run/user/${UID}/podman/podman.sock" >> $GITHUB_ENV
+
+      - name: Add RHEL subscription from GitHub secret
+        if: ${{ inputs.subscription }}
+        env:
+          PULL_SECRET_BASE64: ${{ secrets.PULL_SECRET_BASE64 }}
+        run: |
+          echo "${PULL_SECRET_BASE64}" | base64 --decode > pull-secret.txt
 
       # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#push
       - name: "push|schedule: make ${{ inputs.target }}"
