--- a/amd/rhel9-python-3.9/Dockerfile
+++ b/amd/rhel9-python-3.9/Dockerfile
@@ -26,6 +26,8 @@ RUN echo "Installing softwares and packages" && micropipenv install && rm -f ./P
 
 USER 0
 
+# change!
+
 # Install required packages
 RUN yum -y install git java-1.8.0-openjdk && \
     yum clean all && rm -rf /var/cache/yum
