--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -31,6 +31,14 @@ jobs:
     steps:
 
       - uses: actions/checkout@v4
+        if: ${{ !fromJson(inputs.github).event_name == 'pull_request_target' }}
+
+      # we need to checkout the pr branch, not pr target (the default)
+      # user access check is done in calling workflow
+      - uses: actions/checkout@v4
+        if: ${{ fromJson(inputs.github).event_name == 'pull_request_target' }}
+        with:
+          ref: "refs/pull/${{ input.github.event.number }}/merge"
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
