--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v4
         if: ${{ fromJson(inputs.github).event_name == 'pull_request_target' }}
         with:
-          ref: "refs/pull/${{ input.github.event.number }}/merge"
+          ref: "refs/pull/${{ fromJson(inputs.github).event.number }}/merge"
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
